8206173: MallocSiteTable::initialize() doesn't take function descriptors into account

Reviewed-by: stuefe, zgu